# neloo

./: .dockerignore  .gitignore  .gitleaks.toml  ARCHITECTURE.md  DATABASE_MIGRATION_GUIDE.md  DEPLOY.md  Dockerfile  MIGRATION_REPORT.md  README.md  UPLOAD_SESSIONS_EXPLAINED.md  e2b.Dockerfile  e2b.toml  vercel.json
backend/: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  langgraph.json  langgraph.production.json  pyproject.toml  railway.toml  run_test.py  start.py  test_tool_use.py
backend/knowledge/checklists/: econometrics_checklist.md
backend/knowledge/errors/: common_errors.md
backend/knowledge/methods/: did.md  iv.md
backend/migrations/: 001_chat_messages.sql  002_message_branching.sql  002_persist_chat_message_rpc.sql  003_oauth_state.sql  004_fix_action_logs_fields.sql  create_upload_sessions.sql
backend/scripts/: backfill_langgraph_thread_owners.py  check_hidden_prompt_persistence.py  cleanup_all.py  cleanup_storage.py  index_knowledge.py  run_migration.py  watch_knowledge.py
backend/src/: __init__.py  hidden_prompt_sanitization.py  identity.py  langgraph_auth.py  model_ids.py  runtime_context.py  runtime_context_middleware.py  usage_limits.py
backend/src/agent/: __init__.py  composio_tools.py  graph.py  integration_policy.py  integration_tools.py  message_persistence.py  persistence_middleware.py
backend/src/api/: __init__.py  agent_routes.py  auth.py  composio_routes.py  ratelimit.py  resume_ai_routes.py  resume_pdf_routes.py  resume_routes.py  slides_routes.py  translate_routes.py  trigger_routes.py  webapp.py
backend/src/context/: __init__.py  dual_output.py  file_storage.py
backend/src/patches/: __init__.py  deepseek_reasoning.py
backend/src/rag/: loader.py  (+3 more)
backend/tests/: conftest.py  test_agent.py  test_auth.py  test_composio_config.py  test_dockerfiles.py  test_executor_env.py  test_hidden_prompt_api_flows.py  test_hidden_prompt_sanitization.py  test_identity.py  test_integration_idempotency.py  test_integration_policy.py  test_langgraph_auth.py  test_langgraph_configs.py  test_local_sandbox_guard.py  test_model_ids.py  test_model_registry.py  test_model_routing.py  test_paid_usage_routes.py  test_ratelimit.py  test_slides_ownership.py  test_storage_paths.py  test_url_signature.py  test_usage_limits.py
(+416 files in other folders)
