[project]
name = "neloo-backend"
version = "0.1.0"
description = "General-purpose AI agent backend for Neloo with LangGraph and Deep Agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LangChain 1.0 Deep Agents
    "deepagents>=0.1.0",
    "langchain>=0.3.0",
    "langgraph>=0.3.0",
    "langgraph-cli[inmem]>=0.1.0",
    "langgraph-api>=0.11.0,<0.12",
    "langchain-community>=0.3.0",

    # Model Providers
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-deepseek>=0.0.2",

    # DeepSeek (via OpenAI-compatible API)
    "openai>=1.0.0",

    # Sandbox Execution
    "e2b-code-interpreter>=1.0.0",

    # Web Search
    "tavily-python>=0.5.0",

    # Data Analysis (for local execution)
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "PyJWT>=2.8.0",
    "slowapi>=0.1.9",

    # File Storage
    "supabase>=2.0.0",

    # LangGraph Checkpoint Persistence (PostgreSQL)
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.1.0",

    # RAG (Retrieval-Augmented Generation)
    "langchain-chroma>=0.1.0",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=0.5.0",

    # Third-party App Integration (Composio)
    "composio>=0.10.8,<0.11",
    "composio-langchain>=0.10.8,<0.11",

    # Resume Parsing (YOLOv10 + PDF)
    "pdfplumber>=0.10.0",
    "pymupdf>=1.23.0",
    "onnxruntime>=1.17.0",
    "opencv-python-headless>=4.7.0",
    "json-repair>=0.16.0",

    # PDF Export (Playwright + Chromium)
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
